[package]
name = "hibi2"
version = "0.1.0"
authors = ["Sam Stokes <me@samstokes.co.uk>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
chrono = "0.4.6"
regex = "1"
lazy_static = "1.1.0"
simple-error = "0.1.9"
clap = "2.32.0"
sentry = "0.12.0"
rocket = "0.4.0-rc.1"
maplit = "1.0.1"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]

[target.'cfg(debug_assertions)'.dependencies]
dotenv = "0.9.0"
